# prox-challenge

./: .env.example  .gitignore  Claude_answers.json  README.md  pyproject.toml
docs/: VOICE_PLAN.md
eval/: concepts.json  questions.jsonl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  mock-data.ts  store.ts  types.ts
frontend/src/components/: ArtifactPanel.tsx  ChatPanel.tsx  Sidebar.tsx  VoiceButton.tsx
guides/: ARCHITECTURE.md  DESIGN-DECISIONS.md  KNOWLEDGE-PIPELINE.md  NEXT-STEPS.md  SETUP.md
products/vulcan-omnipro-220/: product.json
products/vulcan-omnipro-220/knowledge/: manifest.json
products/vulcan-omnipro-220/knowledge/articles/: basic-tig-stick-welding.json  basic-wire-welding-technique.json  basic-wire-welding.json  dcep-solid-core-gas.json  duty-cycle-2.json  duty-cycle.json  electrical-safety.json  fume-and-gas-safety.json  grounding.json  limited-90-day-warranty.json  maintenance.json  mig-flux-cored-wire.json  owners-manual-safety-instructions.json  parts-list-and-diagram.json  problem-possible-causes.json  sharpen-tungsten-electrode.json  specifications.json  stick-weld-penetration.json  stick-welding.json  tig-stick-welding.json  tig-welding.json  welding-tips.json  (+6 more)
scripts/: ask_agent.py  ask_local.py  check_agent_setup.py  extract_knowledge.py  generate_eval_questions.py  ingest_articles.py  ingest_visuals.py  setup.bat  setup.ps1  setup.sh  smoke_knowledge.py
src/prox_agent/: __init__.py  agent.py  api.py  cli.py  knowledge.py  local_answer.py  response_contract.py  sdk_tools.py  voice.py
(+12 files in other folders)
